--- a/package.json
+++ b/package.json
@@ -6,5 +6,14 @@
   "exports": {},
   "devDependencies": {
     "rollup": "*"
+  },
+  "workspaces": {
+    "packages": [
+      "packages/@smotaal/tokenizer",
+      "packages/pseudom"
+    ],
+    "nohoist": [
+      "tokenizer/pseudom"
+    ]
   }
 }
