--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "private": "true",
+  "private": true,
   "name": "@smotaal/markup",
   "version": "0.0.0-alpha.1",
   "main": "index",
   "exports": {},
+  "scripts": {
+    "serve": "http-server --cors"
+  },
   "devDependencies": {
-    "rollup": "*"
+    "rollup": "*",
+    "http-server": "latest"
   },
   "workspaces": {
     "packages": [
