--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index",
   "exports": {},
   "scripts": {
-    "serve": "http-server --cors",
+    "serve": "http-server --cors -s",
     "bundle": "rollup -c rollup.config.js"
   },
   "devDependencies": {
