--- a/packages/@smotaal/tokenizer/package.json
+++ b/packages/@smotaal/tokenizer/package.json
@@ -2,15 +2,19 @@
   "private": true,
   "name": "@smotaal/tokenizer",
   "displayName": "SMotaal's Tokenizer",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "Nestable syntax tokenizer using Regular Expressions",
   "license": "MIT",
-  "main": "index.mjs",
+  "main": "dist/tokenizer.extended.mjs",
+  "module": "dist/tokenizer.extended.mjs",
+  "browser": "dist/tokenizer.browser.mjs",
   "publishConfig": {
     "access": "public"
   },
+  "mode": "esm",
   "exports": {
-    "./extended.js": "./extended.mjs",
+    "./": "./tokenizer.js",
+    "./extended": "./extended.js",
     "./lib/": "./lib/",
     "./extensions/": "./extensions/",
     "./modes/": "./modes/"
