--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,28 @@
 {
-  "search.exclude": {
-    "**/node_modules": true,
-    "**/bower_components": true,
-    "[more]": true
-  }
+	"search.exclude": {
+		"**/node_modules": true,
+		"**/bower_components": true,
+		"**/archive": true,
+		"**/trash": true,
+		"**/dist": true,
+		"[more]": true,
+		"components": true,
+		"markup": true,
+		"pholio": true,
+		"quench": true
+	},
+	"files.watcherExclude": {
+		"**/.git/objects/**": true,
+		"**/.git/subtree-cache/**": true,
+		"**/node_modules": true,
+		"**/bower_components": true,
+		"**/archive": true,
+		"**/trash": true,
+		"**/dist": true,
+		"[more]": true,
+		"components": true,
+		"markup": true,
+		"pholio": true,
+		"quench": true
+	}
 }
