--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 ﻿# * SEE: https://jekyllrb.com/docs/configuration/options/
-theme: 'jekyll-theme-cayman'
+theme: "jekyll-theme-cayman"
 
-exclude: ['.vscode', '[more]', 'trash', '[trash]', 'node_modules']
+exclude: [".vscode", "[more]", "[trash]", "trash", "node_modules"]
