--- a/benchmarks/package.json
+++ b/benchmarks/package.json
@@ -1,7 +1,8 @@
 {
   "name": "markup-benchmark",
   "version": "0.0.0",
-  "mode": "esm",
+  "type": "module",
+  "main": "index.js",
   "exports": {
     "./": "benchmark.js"
   }
