Refactor tokenizer grammars into a separate package

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "workspaces": {
     "packages": [
       "../esm",
+      "packages/@smotaal/grammars",
       "packages/@smotaal/tokenizer",
       "packages/pseudom"
     ],
