--- a/packages/grammars/package.json
+++ b/packages/grammars/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "mode": "esm",
   "type": "module",
+  "types": "./types.d.ts",
   "publishConfig": {
     "access": "public"
   }
