Major refactor groundwork for experimental Matcher implementation

--- a/packages/matcher/package.json
+++ b/packages/matcher/package.json
@@ -7,6 +7,8 @@
   "types": "types.d.ts",
   "exports": {
     "./debug": "./lib/debug.js",
-    "./matches": "./lib/matches.js"
+    "./matches": "./lib/matches.js",
+    "./token-matcher": "./lib/token-matcher.js",
+    "./segments-matcher": "./lib/segment-matcher.js"
   }
 }
