Get things ready for @agoric-labs/markup :)

--- a/.npmignore
+++ b/.npmignore
@@ -2,13 +2,14 @@
 specs/
 docs/
 meta/
+experiments/
 **/*.psd
 **/*.tgz
 **/*.visx
 **/trash/
-**/[[]trash[]]/
 **/.DS_Store
 .*/**
 **/tsconfig.json
+**/jsconfig.json
 **/tsbuildinfo.json
 **/*.tsbuildinfo
