--- a/packages/matcher/package.json
+++ b/packages/matcher/package.json
@@ -11,5 +11,10 @@
     "./token-matcher": "./lib/token-matcher.js",
     "./segments-matcher": "./lib/segment-matcher.js",
     "./helpers/": "./helpers/"
+  },
+  "workspaces": {
+    "packages": [
+      "./packages/*"
+    ]
   }
 }
