--- a/packages/tokenizer/.npmignore
+++ b/packages/tokenizer/.npmignore
@@ -2,6 +2,7 @@
 specs/
 docs/
 meta/
+experiments/
 **/*.psd
 **/*.tgz
 **/*.visx
@@ -10,6 +11,7 @@ meta/
 **/.DS_Store
 .*/**
 **/tsconfig.json
+**/jsconfig.json
 **/tsbuildinfo.json
 **/*.tsbuildinfo
 index.html
