--- a/packages/tokenizer/package.json
+++ b/packages/tokenizer/package.json
@@ -13,7 +13,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@smotaal/grammars": "*",
+    "@smotaal/grammar": "*",
     "@smotaal/pseudom": "*"
   }
 }
