--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "workspaces": {
     "packages": [
-      "packages/grammars",
+      "packages/grammar",
       "packages/tokenizer",
       "packages/pseudom",
       "packages/markup"
