Improve pseudom parity (ie ParentNode interface)

--- a/packages/pseudom/package.json
+++ b/packages/pseudom/package.json
@@ -16,7 +16,8 @@
     "./": "./pseudom.js",
     "./pseudo": "./pseudo.js",
     "./native": "./native.js",
-    "./helpers": "./helpers.js"
+    "./helpers": "./helpers.js",
+    "./tests": "./tests"
   },
   "publishConfig": {
     "access": "public"
